[tool.poetry]
name = "graph-theory"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "graph_theory"}]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
darglint = "^1.8.1"
# as for 2022.09.20, latest version of flake8-html does not work with flake8>=5.0.0
# https://github.com/lordmauve/flake8-html/issues/30
# both packages need to be updated after above issue is fixed
flake8 = "^4.0.1"
flake8-html = "^0.4.2"
flake8-isort = "^4.2.0"
flake8-pydocstyle = "^0.2.0"
flake8-todo = "^0.7"
mypy = "^0.971"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = """
--cov graph_theory \
--cov-config=setup.cfg \
--cov-report html:coverage-report \
--cov-report term:skip-covered \
--cov-fail-under=80 \
--no-cov-on-fail \
-Werror -Wignore::ImportWarning \
--strict-markers \
"""

[tool.isort]
virtual_env = ".venv"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_types = 0
lines_between_sections = 1
lines_after_imports = 2
lines_before_imports = 0
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 110
force_grid_wrap = 0
combine_as_imports = true
ensure_newline_before_comments = true
order_by_type = false

[tool.pydocstyle]
### Ignoring explanation
# D100 - Missing docstring in public module
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D200 - One-line docstring should fit on one line with quotes
# D203 - 1 blank line required before class docstring
# D204 - 1 blank line required after class docstring
# D205 - 1 blank line required between summary line and description
# D212 - Multi-line docstring summary should start at the first line
# D400 - First line should end with a period
# Ignores below are a matter of style that we need to discuss as a team and make a decision
# D401 - First line should be in imperative mood
# D105 - Missing docstring in magic method
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D104,D105,D107,
D200,D203,D204,D205,D212,
D400,D401,D415
"""

[tool.mypy]
files = "."
show_error_codes = true
# Strict options
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # overridden from strict, because https://github.com/python/mypy/issues/8823
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
# Additional options
disallow_untyped_globals = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
strict_optional = false
allow_untyped_defs = true
allow_incomplete_defs = true
check_untyped_defs = false
